[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
    "packaging>=26.0",
    "torch @ https://download-r2.pytorch.org/whl/cu129/torch-2.10.0%2Bcu129-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=afd73cb16ee6fe7cd86b089822401ca81f587c4425a5e592536e331cfdcece64",
    "ninja>=1.13.0",
    "psutil>=7.2.2",
    "numpy>=2.4.4"
]


[project]
name = "flash_attn_v100"
version = "26.06"
description = "Flash Attention 2 for Tesla v100"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS"]
dynamic = ["authors", "classifiers", "urls"]
dependencies = [
    "torch @ https://download-r2.pytorch.org/whl/cu129/torch-2.10.0%2Bcu129-cp310-cp310-manylinux_2_28_x86_64.whl#sha256=afd73cb16ee6fe7cd86b089822401ca81f587c4425a5e592536e331cfdcece64",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
    "packaging>=26.0",
    "ninja>=1.13.0",
    "psutil>=7.2.2",
    "numpy>=2.4.4"
]

[tool.setuptools]
packages = ["flash_attn_v100"]

[tool.setuptools.exclude-package-data]
"*" = [
    "build",
    "kernel",
    "include",
    "flash_attn_v100.egg-info",
    "*.cu",
    "*.cuh",
    "*.cpp",
    "*.h"
]